--- a/site/admin/index.pug
+++ b/site/admin/index.pug
@@ -1,7 +1,19 @@
+---
+name: "Admin"
+date: 2022-03-13T04:17:58.912Z
+updated: 2022-03-13T04:17:58.933Z
+tags: []
+---
+
 doctype html
-html
-  body
+html(lang="en")
+  head
+    meta(charset="UTF-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(type='text/javascript').
       window.CMS_MANUAL_INIT = true
-    script(src='./netlify-cms.js')
+    //- script(src='./netlify-cms.js')
+    script(src='https://unpkg.com/netlify-cms@2.10.189/dist/netlify-cms.js')
     script(src='./index.js', type='module')
+  body
