--- a/site/styles.css
+++ b/site/styles.css
@@ -57,17 +57,20 @@ body {
   padding: 1em;
 }
 
-/* main {} */
+main {
+  margin: 0 auto;
+  max-width: 60em;
+}
 
 section {
-  background-color: #f6f6eb;
+  background-color: #fbfbf2;
   margin: 1em auto;
-  max-width: 60em;
   padding: 1em;
 }
 
 footer {
-  background-color: #f6f6eb;
+  background-color: #fbfbf2;
+  box-sizing: border-box;
   padding: 1em;
   margin: 1em auto 0 auto;
   max-width: 60em;
@@ -75,4 +78,21 @@ footer {
 
 footer:empty {
   display: none;
+}
+
+.tag__nav {
+}
+.tag__list {
+  padding: 0;
+}
+.tag__list_item {
+  display: inline-block;
+  margin: 0.25em 0.5em;
+}
+.tag__anchor {
+  border: 2px solid #ffd8be;
+  border-radius: 1em;
+  display: inline-block;
+  padding: 0.25em 1em;
+  word-break: break-all;
 }
